--- a/index.html
+++ b/index.html
@@ -1,15 +1,171 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Laboratorio: HTML</title>
+    <link rel="stylesheet" href="/src/style.css" />
   </head>
   <body>
-    <div id="app">
-      <h1>Bootcamp JS - JavaScript SandBox</h1>
-    </div>
+    <header class="header">
+      <button class="header-button">
+        <figure class="item-icon">
+          <img
+            src="./src/assets/icons/icon-menu-burguer.svg"
+            alt="Icono más opciones de menú principal"
+            title="Icono más opciones de menú principal"
+          />
+        </figure>
+      </button>
+      <!--     <nav class="menu">
+        <ul class="list">
+          <li class="item">
+            <a>Moda mujer</a>
+            <a>Moda hombre</a>
+            <a>Nueva colección</a>
+            <a>Colecciones especiales</a>
+          </li>
+          <li class="item">
+            <a>Moda mujer</a>
+            <a>Moda hombre</a>
+            <a>Nueva colección</a>
+            <a>Colecciones especiales</a>
+          </li>
+        </ul>
+      </nav> -->
+    </header>
+    <main class="main">
+      <h1 class="main-title">Nuevas colecciones</h1>
+      <ul class="main-list">
+        <li class="main-item">
+          <figure class="main-item-image">
+            <img
+              src="./src/assets/images/image-3.jpg"
+              alt="Vestido corto, azul de tirantes"
+              title="Vestido corto, azul y con tirantes"
+            />
+          </figure>
+          <div class="main-item-info">
+            <p class="main-item-description">Vestido</p>
+            <p class="main-item-amount">39,99 €</p>
+          </div>
+        </li>
+        <li class="main-item">
+          <figure class="main-item-image">
+            <img
+              src="./src/assets/images/image-6.jpg"
+              alt="Camisa amarilla de manga corta"
+              title="Camisa amarilla de manga corta"
+            />
+          </figure>
+          <div class="main-item-info">
+            <p class="main-item-description">Camisa</p>
+            <p class="main-item-amount">44,99 €</p>
+          </div>
+        </li>
+        <li class="main-item">
+          <figure class="main-item-image">
+            <img
+              src="./src/assets/images/image-4.jpg"
+              alt="Vaqueros blancos largos con abertura en el tobillo"
+              title="Vaqueros blancos largos con abertura en el tobillo"
+            />
+          </figure>
+          <div class="main-item-info">
+            <p class="main-item-description">Vaqueros</p>
+            <p class="main-item-amount">79,99 €</p>
+          </div>
+        </li>
+        <li class="main-item">
+          <figure class="main-item-image">
+            <img
+              src="./src/assets/images/image-5.jpg"
+              alt="Polo beige de manga corta con ribete blanco"
+              title="Polo beige de manga corta con ribete blanco"
+            />
+          </figure>
+          <div class="main-item-info">
+            <p class="main-item-description">Polo</p>
+            <p class="main-item-amount">44,95 €</p>
+          </div>
+        </li>
+        <li class="main-item">
+          <figure class="main-item-image">
+            <img
+              src="./src/assets/images/image-1.jpg"
+              alt="Camisa blanca de sarga con manga larga"
+              title="Camisa blanca de sarga con manga larga"
+            />
+          </figure>
+          <div class="main-item-info">
+            <p class="main-item-description">Camisa</p>
+            <p class="main-item-amount">25,00 €</p>
+          </div>
+        </li>
+        <li class="main-item">
+          <figure class="main-item-image">
+            <img
+              src="./src/assets/images/image-2.jpg"
+              alt="Camiseta básica blanca de manga corta y serigrafía"
+              title="Camiseta básica blanca de manga corta y serigrafía"
+            />
+          </figure>
+          <div class="main-item-info">
+            <p class="main-item-description">Camiseta</p>
+            <p class="main-item-amount">22,99 €</p>
+          </div>
+        </li>
+      </ul>
+    </main>
+    <footer class="footer">
+      <ul class="footer-list">
+        <li class="footer-item">
+          <a class="footer-link">
+            <figure class="footer-item-figure">
+              <img
+                class="footer-item-img"
+                src="./src/assets/icons/icon-truck.svg"
+                alt="Entrega"
+                title="Entrega"
+              />
+            </figure>
+            <p class="footer-item-text">Entrega</p>
+          </a>
+        </li>
+        <li class="footer-item">
+          <a class="footer-link">
+            <p class="footer-item-text">Devoluciones y cambios</p>
+          </a>
+        </li>
+        <li class="footer-item">
+          <a class="footer-link">
+            <figure class="footer-item-figure">
+              <img
+                class="footer-item-img"
+                src="./src/assets/icons/icon-phone.svg"
+                alt="Entrega"
+                title="Entrega"
+              />
+            </figure>
+            <p class="footer-item-text">+375 (29) 749-18-23</p>
+          </a>
+        </li>
+        <li class="footer-item">
+          <a class="footer-link">
+            <figure class="footer-item-figure">
+              <img
+                class="footer-item-img"
+                src="./src/assets/icons/icon-mail.svg"
+                alt="Entrega"
+                title="Entrega"
+              />
+            </figure>
+            <p class="footer-item-text">shop@omix.com</p>
+          </a>
+        </li>
+      </ul>
+    </footer>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
